2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Menu-specific commands): Remove some semantics
	that were true in GRUB Legacy but not in GRUB 2.
	(submenu): New section.
	(false): New section.
	(read): New section.
	(true): New section.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Changes from GRUB Legacy): Minor proofreading.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Explain some of the
	current limitations of grub-mkconfig.
	Reported by: Leslie Rhorer.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Old macs search for boot.efi rather than for bootia32.efi.

	* util/grub-install.in: Copy bootia32.efi to boot.efi.
	* util/grub-mkrescue.in: Likewise.
	Suggested by: Peter Jones.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Accept old-style xen kernels.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/lvm.h (grub_lvm_lv): New field 'visible'.
	(grub_lvm_segment): New fields 'type', 'mirror_count' and 'mirrors'.
	(grub_lvm_mirror): New struct.
	* grub-core/disk/lvm.c (grub_lvm_checkvalue): Commented out.
	(grub_lvm_iterate): Iterate only visible volumes.
	(grub_lvm_read): Factor out to ..
	(read_lv): ... this. Support mirrors.
	(grub_lvm_read): New wrapper function.
	(grub_lvm_scan_device): Parse mirrors. Skip everything that isn't
	stripped or mirrored.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Skip vmlinux-* on x86 platforms.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (loopback): New section.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/loopback.c (GRUB_MOD_INIT): Stop documenting
	removed -p option.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (BIOS installation): New section, partly based on
	previous text in other sections.